# AGCH-Impl

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  requirements.txt
.agent/skills/algorithmic-art/: .openskills.json
.agent/skills/brand-guidelines/: .openskills.json
.agent/skills/canvas-design/: .openskills.json
_bmad-output/implementation-artifacts/: 1-1-initialize-project-structure-dependencies.md  1-2-configure-paths-logging-infrastructure.md  2-1-hdf5-data-module-caching.md  3-1-agch-lightning-module-skeleton-manual-optimization-setup.md  3-2-implement-alternating-optimization-logic.md  4-1-implementation-of-retrieval-metrics-map-pk.md  4-2-reproducibility-determinism-verification.md  5-1-end-to-end-system-integration.md  5-2-hyperparameter-tuning-final-experiments.md  atdd-checklist-3-2-implement-alternating-optimization-logic.md  atdd-checklist-4-1.md  atdd-checklist-4-2.md  atdd-checklist-5-1.md  atdd-checklist-5-2.md  implementation_plan.md  sprint-status.yaml  task.md  walkthrough.md
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2026-01-18.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
configs/: train.yaml
configs/callbacks/: default.yaml
configs/data/: mirflickr.yaml
configs/extras/: default.yaml
configs/hydra/: default.yaml
configs/logger/: csv.yaml  tensorboard.yaml
configs/model/: agch.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
docs/: AGCH-Debugging-Log-2026-01-19.md  AGCH-Guide.md  AGCH-Optimization-Analysis-2026-01-19.md  architecture-analysis.md  index.md  project-overview.md  project-scan-report.json
scripts/: prepare_data.py  run_ablation.sh  run_experiments.sh  setup-env.sh
src/: __init__.py  train.py
src/data/: __init__.py  agch_datamodule.py
src/models/: __init__.py  agch_module.py  components.py
src/utils/: __init__.py  metrics.py
tests/: README.md  __init__.py  conftest.py  test_experiments_script.py  test_integration_train.py  test_metrics.py  test_reproducibility.py  test_story_1_1.py  test_story_1_2.py  test_story_2_1_atdd.py  test_story_3_1_atdd.py  test_story_3_2_atdd.py
(+15 files in other folders)
